--- a/plugins/build.gradle
+++ b/plugins/build.gradle
@@ -10,6 +10,7 @@ buildscript {
 allprojects {
     repositories {
         jcenter()
+        maven { url "http://oss.sonatype.org/content/repositories/snapshots/" }
     }
 }
 
