--- a/plugins/building/build.gradle
+++ b/plugins/building/build.gradle
@@ -1,15 +1,14 @@
 apply plugin: 'com.android.library'
 
 android {
-    compileSdkVersion rootProject.ext.compileSdkVersion
-    buildToolsVersion rootProject.ext.buildToolsVersion
+    compileSdkVersion 25
+    buildToolsVersion "25.0.3"
 
     defaultConfig {
-        minSdkVersion rootProject.ext.minSdkVersion
-        targetSdkVersion rootProject.ext.targetSdkVersion
+        minSdkVersion 15
+        targetSdkVersion 25
         versionCode 1
         versionName "0.1"
-        testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
     }
 
     configurations {
@@ -18,11 +17,6 @@ android {
 }
 
 dependencies {
-    // Unit testing
-    testCompile rootProject.ext.dep.junit
-    testCompile rootProject.ext.dep.mockito
-
-    // Mapbox dependencies
     compile('com.mapbox.mapboxsdk:mapbox-android-sdk:5.1.0@aar') {
         transitive = true
     }
