--- a/plugins/app/src/main/AndroidManifest.xml
+++ b/plugins/app/src/main/AndroidManifest.xml
@@ -3,12 +3,12 @@
           package="com.mapbox.mapboxsdk.plugins.testapp">
 
     <application
+        android:name=".PluginApplication"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:name=".PluginApplication"
         android:theme="@style/AppTheme">
         <activity android:name=".activity.FeatureOverviewActivity">
             <intent-filter>
@@ -23,6 +23,17 @@
             <meta-data
                 android:name="@string/category"
                 android:value="@string/category_runtime_styling"/>
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value=".activity.FeatureOverviewActivity"/>
+        </activity>
+        <activity
+            android:name=".activity.MarkerClusterActivity"
+            android:description="@string/description_cluster"
+            android:label="@string/title_cluster">
+            <meta-data
+                android:name="@string/category"
+                android:value="@string/category_annotations"/>
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value=".activity.FeatureOverviewActivity"/>
