--- a/plugins/app/build.gradle
+++ b/plugins/app/build.gradle
@@ -65,6 +65,7 @@ dependencies {
 
     // Plugin modules
     compile project(':traffic')
+    compile project(path: ':icongenerator')
 }
 
 apply from: '../checkstyle.gradle'
