--- a/plugins/app/src/main/AndroidManifest.xml
+++ b/plugins/app/src/main/AndroidManifest.xml
@@ -27,6 +27,17 @@
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value=".activity.FeatureOverviewActivity"/>
         </activity>
+        <activity
+            android:name=".activity.IconGeneratorActivity"
+            android:description="@string/description_icongen"
+            android:label="@string/title_icongen">
+            <meta-data
+                android:name="@string/category"
+                android:value="@string/category_annotations"/>
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value=".activity.FeatureOverviewActivity"/>
+        </activity>
     </application>
 
 </manifest>
