--- a/plugins/icongenerator/build.gradle
+++ b/plugins/icongenerator/build.gradle
@@ -1,19 +1,17 @@
 apply plugin: 'com.android.library'
 
 android {
-    compileSdkVersion 25
-    buildToolsVersion "26.0.0"
-
+    compileSdkVersion rootProject.ext.compileSdkVersion
+    buildToolsVersion rootProject.ext.buildToolsVersion
 
     defaultConfig {
-        minSdkVersion 15
-        targetSdkVersion 25
+        minSdkVersion rootProject.ext.minSdkVersion
+        targetSdkVersion rootProject.ext.targetSdkVersion
         versionCode 1
-        versionName "1.0"
-
+        versionName "0.1"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
-
     }
+
     buildTypes {
         release {
             minifyEnabled false
@@ -24,7 +22,7 @@ android {
 
 dependencies {
     // Mapbox dependencies
-    implementation('com.mapbox.mapboxsdk:mapbox-android-sdk:5.0.2@aar') {
+    compile('com.mapbox.mapboxsdk:mapbox-android-sdk:5.0.2@aar') {
         transitive = true
     }
 //    javadocDeps 'com.mapbox.mapboxsdk:mapbox-android-sdk:5.0.2'
