--- a/plugins/building/gradle.properties
+++ b/plugins/building/gradle.properties
@@ -1,4 +1,4 @@
-POM_ARTIFACT_ID=mapbox-android-building-plugin
-POM_NAME=Mapbox Android Plugins
-POM_DESCRIPTION=Mapbox Android Plugins (Building)
+POM_ARTIFACT_ID=mapbox-android-plugin-building
+POM_NAME=Mapbox Android Building Plugin
+POM_DESCRIPTION=Mapbox Android Building Plugin
 POM_PACKAGING=aar
